# VoxelSpace

./: CMakeLists.txt
cmake/: embed.cmake  options.cmake
include/: maps.h
src/: main.c  maps.c
src/wasm-shell/: pre.js  shell.html
